finished header and footer, setup login and register url and view

--- a/templates/post/home.html
+++ b/templates/post/home.html
@@ -1,4 +1,8 @@
+{% extends "post/base.html" %}
+
+<!--  -->
+
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'post/css/home.css' %}" />
-<h1>Welcome to Autoblue</h1>
+<!--  -->
+{% block content %} {% endblock %}
