--- a/static/post/css/layouts/footer.css
+++ b/static/post/css/layouts/footer.css
@@ -1,18 +1,19 @@
 #footer {
-  position: absolute;
-  bottom: 0;
+  /* position: absolute;
+  bottom: 0; */
+  background-color: var(--primary-bg-color);
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  padding: 20px;
+  padding: 50px;
   border-top: solid;
   border-width: thin;
+  height: 50px;
 }
-.footer__p{
-    color: var(--footer-text-colorr)
+.footer__p {
+  color: var(--footer-text-color);
 }
-.footer__p a{
-    color: var(--footer-link-color);
-    cursor: pointer;
+.footer__p a {
+  color: var(--footer-link-color);
+  cursor: pointer;
 }
