--- a/static/post/css/pages/register.css
+++ b/static/post/css/pages/register.css
@@ -1,6 +1,7 @@
 #register {
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -12,11 +13,13 @@
   border-radius: 10px;
   box-shadow: 0 0 15px var(--primary-bg-color);
 }
-
+#register-form {
+  display: flex;
+  flex-direction: column;
+}
 #register-form label {
   color: var(--primary-text-color);
   font-size: 14px;
-  margin-bottom: 8px;
 }
 
 #register-form input[type="text"],
@@ -26,13 +29,24 @@
   margin-bottom: 16px;
   border: none;
   border-radius: 5px;
+  font-size: 16px;
 }
 
 #register-form input[type="submit"] {
-  background:  var(--primary-btn-bg-color);
+  background: var(--primary-btn-bg-color);
   color: var(--primary-text-color);
   padding: 12px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+.register-succes {
+  display: none;
+  position: relative;
+  top: -10px;
+  background-color: var(--primary-btn-bg-color);
+  padding: 5px;
+  border-radius: 10px;
+  width: 200px;
+  text-align: center;
 }
