--- a/static/auto_app/css/pages/dashboard.css
+++ b/static/auto_app/css/pages/dashboard.css
@@ -1,6 +1,110 @@
-#dashboard{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#dashboard {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  height: 100%;
+}
+
+.dashboard-header h1 {
+  color: #333;
+  text-align: center;
+
+  margin: 50px;
+}
+
+.dashboard-tabs {
+  display: flex;
+  justify-content: space-between;
+  /* background-color: #fff; */
+  padding: 10px;
+  box-shadow: 0 0 15px var(--primary-bg-color);
+}
+
+.tab-button {
+  padding: 10px 20px;
+  border: none;
+  /* background: #ddd; */
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.tab-button.active {
+  background: var(--primary-btn-bg-color);
+  /* color: white; */
+}
+
+.tab-content {
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 8px;
+}
+/* settings card ----------------- settings card */
+/* settings card  ----------------- settings card  */
+
+.settings-div {
+  display: flex;
+  justify-content: center;
+}
+.settings-card {
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: fit-content;
+  font-family: Arial, sans-serif;
+}
+.settings-card h3 {
+  margin: 10px 0 10px 0;
+}
+.settings-card input {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+/* .settings-card button {
+  margin-right: 10px;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+} */
+.delete-account {
+  width: 100%;
+  background-color: #f44336;
+  margin-right: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#togglePassword {
+  margin-bottom: 10px;
+}
+
+/* bot card ----------------- bot card */
+/* bot card  ----------------- bot card  */
+.bot-div {
+  display: flex;
+  justify-content: center;
+}
+.bot-card {
+  width: 350px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  font-family: Arial, sans-serif;
+}
+.bot-card button {
+  margin-right: 10px;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
 }
