--- a/templates/auto_app/base.html
+++ b/templates/auto_app/base.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <!-- title -->
     <title>Autoblue</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{% static 'auto_app/images/favicon.ico' %}" />
 
     <!--  css files -->
     <link rel="stylesheet" href="{% static 'auto_app/css/main.css' %}" />
