--- a/static/auto_app/css/layouts/footer.css
+++ b/static/auto_app/css/layouts/footer.css
@@ -8,7 +8,7 @@
   padding: 50px;
   border-top: solid;
   border-width: thin;
-  height: 50px;
+  /* height: 50px; */
 }
 .footer__p {
   color: var(--footer-text-color);
