added require to login form fields

--- a/templates/auto_app/login.html
+++ b/templates/auto_app/login.html
@@ -14,7 +14,7 @@
         {% csrf_token %}
 
         <label for="username">Username</label>
-        <input type="text" placeholder="Enter your Username" name="username" required  id="username" minlength="3"  maxlength="12" autocomplete="username">
+        <input type="text" placeholder="Enter your Username" name="username" required  id="username" minlength="3"  maxlength="12" autocomplete="username" required>
     
         <label for="password"><b>Password</b></label>
         <input type="password" placeholder="Enter your Password" name="password" required   id="password" autocomplete="current-password" minlength="6">
