--- a/static/auto_app/css/pages/partials/create_tab.css
+++ b/static/auto_app/css/pages/partials/create_tab.css
@@ -5,7 +5,7 @@
 .create-btn {
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #4caf50;
+  background-color: var(--primary-btn-bg-color);
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -25,7 +25,7 @@
   background-color: rgba(0, 0, 0, 0.6);
 }
 .modal-content {
-  background: white;
+  background: var(--schedule-form-bg);
   padding: 20px;
   width: 600px;
   height: fit-content;
@@ -42,7 +42,7 @@
 .cancel-btn {
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: red;
+  background-color: var(--cancel-btn);
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -51,7 +51,7 @@
 .schedule-btn {
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #4caf50;
+  background-color: var(--primary-btn-bg-color);
   border: none;
   border-radius: 4px;
   cursor: pointer;
