--- a/static/auto_app/css/pages/partials/website_tab.css
+++ b/static/auto_app/css/pages/partials/website_tab.css
@@ -2,46 +2,37 @@
 /* settings card  ----------------- settings card  */
 
 .settings-div {
-    display: flex;
-    justify-content: center;
-  }
-  .settings-card {
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: fit-content;
-    font-family: Arial, sans-serif;
-  }
-  .settings-card h3 {
-    margin: 10px 0 10px 0;
-  }
-  .settings-card input {
-    display: block;
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-  /* .settings-card button {
-    margin-right: 10px;
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  } */
-  .delete-account {
-    width: 100%;
-    background-color: #f44336;
-    margin-right: 10px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  #togglePassword {
-    margin-bottom: 10px;
-  }
+  display: flex;
+  justify-content: center;
+}
+.settings-card {
+  border: 1px solid var(--bot-container-border);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: fit-content;
+  font-family: Arial, sans-serif;
+}
+.settings-card h3 {
+  margin: 10px 0 10px 0;
+}
+.settings-card input {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid var(--bot-container-border);
+}
+.delete-account {
+  width: 100%;
+  background-color: var(--cancel-btn);
+  margin-right: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#togglePassword {
+  margin-bottom: 10px;
+}
