--- a/static/auto_app/css/utilities/colors.css
+++ b/static/auto_app/css/utilities/colors.css
@@ -3,6 +3,10 @@
   --primary-bg-color: #5d62ff;
   --primary-text-color: black; /* wheat; */
   --primary-btn-bg-color: #33b249;
+  --white: #fff;
+  --black: black;
+  --blue: #0073e6;
+  --dark-gray: #666;
 
   /* --nav-bg-color: #5d62ff; */
   --nav-txt-color: wheat;
@@ -12,4 +16,10 @@
   /* --footer-bg-color: #5d62ff; */
   --footer-text-color: wheat;
   --footer-link-color: blue;
+
+  /* dashboard */
+  --cancel-btn: red;
+  --schedule-form-bg: white;
+  --bot-container-bg: #f9f9f9;
+  --bot-container-border: #ddd;
 }
