added post creation form and styles

--- a/templates/auto_app/partials/create_tab.html
+++ b/templates/auto_app/partials/create_tab.html
@@ -8,6 +8,13 @@
         <button class="schedule-btn">Schedule</button>
       </div>
 
+      <form action="">
+        <!-- <input type="text" id="content-input" placeholder="What's up?"> -->
+        <textarea name="" id="content-input" placeholder="What's up?" ></textarea>
+      </form>
+      <div class="content-utilities">
+        <span class="word-count">300</span>
+      </div>
     </div>
   </div>
 </div>
