--- a/static/auto_app/css/pages/partials/create_tab.css
+++ b/static/auto_app/css/pages/partials/create_tab.css
@@ -12,7 +12,7 @@
   width: fit-content;
 }
 #modal {
-  display: none;
+  display: none; /* flex  */
   justify-content: center;
   position: fixed;
   z-index: 1000;
@@ -28,8 +28,10 @@
   background: var(--schedule-form-bg);
   padding: 20px;
   width: 600px;
-  height: fit-content;
+  height: 300px;
   margin: 100px 10px 0 10px;
+  display: flex;
+  flex-direction: column;
 
   /* max-width: 600px;
     min-width: 600px; */
@@ -56,4 +58,26 @@
   border-radius: 4px;
   cursor: pointer;
   width: fit-content;
+}
+
+#modal form {
+  margin: 30px 0 0 0;
+}
+#content-input {
+  border: none;
+  outline: none;
+  caret-color: blue;
+  width: 100%;
+  max-width: 100%;
+  height: 150px;
+  resize: none;
+}
+.content-utilities {
+  border-top: solid 1px;
+  /* margin-top: auto; */
+}
+.word-count {
+  display: flex;
+  flex-direction: row-reverse;
+  color: var(--word-count);
 }
