--- a/static/auto_app/css/pages/partials/create_tab.css
+++ b/static/auto_app/css/pages/partials/create_tab.css
@@ -40,6 +40,7 @@
 .modal-btns {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 10px;
 }
 .cancel-btn {
   margin-top: 10px;
@@ -60,9 +61,9 @@
   width: fit-content;
 }
 
-#modal form {
+/* #modal form {
   margin: 30px 0 0 0;
-}
+} */
 #content-input {
   border: none;
   outline: none;
@@ -71,10 +72,13 @@
   max-width: 100%;
   height: 150px;
   resize: none;
+  font-size: 16px;
 }
 .content-utilities {
   border-top: solid 1px;
-  /* margin-top: auto; */
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 .word-count {
   display: flex;
