--- a/static/auto_app/css/pages/partials/website_tab.css
+++ b/static/auto_app/css/pages/partials/website_tab.css
@@ -22,6 +22,7 @@
   margin-bottom: 10px;
   padding: 8px;
   border-radius: 4px;
+  font-size: 16px;
   border: 1px solid var(--bot-container-border);
 }
 .delete-account {
