--- a/templates/auto_app/partials/create_tab.html
+++ b/templates/auto_app/partials/create_tab.html
@@ -8,19 +8,24 @@
         <button class="schedule-btn" type="submit">Schedule</button>
       </div> -->
 
-      <form action="/save_schedules/", method="post" id="post-form">
+      <form action="/save_schedules/" , method="post" id="post-form">
         <div class="modal-btns">
           <button class="cancel-btn">Cancel</button>
           <button class="schedule-btn" type="submit">Schedule</button>
         </div>
         {% csrf_token %}
-        <textarea name="post_text" id="content-input" placeholder="What's up?"  required></textarea>
+        <textarea
+          name="post_text"
+          id="content-input"
+          placeholder="What's up?"
+          required
+        ></textarea>
         <div class="content-utilities">
-          <span>Pick time and date: <input type="datetime-local" name="date" required> </span>
+          <span> Date and Time: </span>
+          <input type="datetime-local" name="date_time" required min="{{min_date}}" />
           <span class="word-count">300</span>
         </div>
       </form>
-
     </div>
   </div>
 </div>
