--- a/static/auto_app/css/pages/partials/create_tab.css
+++ b/static/auto_app/css/pages/partials/create_tab.css
@@ -12,7 +12,7 @@
   width: fit-content;
 }
 #modal {
-  display: flex ; /* none  */
+  display: none; /* flex  */
   justify-content: center;
   position: fixed;
   z-index: 1000;
