update schedule script added delete script updated UI added docker configs

--- a/templates/auto_app/dashboard.html
+++ b/templates/auto_app/dashboard.html
@@ -9,9 +9,7 @@
   </div>
 
   <nav class="dashboard-tabs">
-    <button class="tab-button active" data-tab="tab1">
-      Create & Schedule Post
-    </button>
+    <button class="tab-button active" data-tab="tab1">Create & Schedule Post</button>
     <button class="tab-button" data-tab="tab2">Scheduled Posts</button>
     <button class="tab-button" data-tab="tab3">Bot Account Settings</button>
     <button class="tab-button" data-tab="tab4">Autoblue Settings</button>
@@ -36,6 +34,5 @@
 <script src="{% static 'auto_app/javascript/pages/partials/scheduled_tab.js' %}"></script>
 <script src="{% static 'auto_app/javascript/pages/partials/bot_setting_tab.js' %}"></script>
 <script src="{% static 'auto_app/javascript/pages/partials/website_tab.js' %}"></script>
-
 
 {% endblock %}
