--- a/templates/auto_app/home.html
+++ b/templates/auto_app/home.html
@@ -7,6 +7,6 @@
 <!--  -->
 {% block content %} 
 <section id="home">
-    <h1>Welcome Home</h1>
+    <h1>Welcome to AutoBlue</h1>
 </section>
 {% endblock %}
