--- a/static/auto_app/css/pages/partials/scheduled_tab.css
+++ b/static/auto_app/css/pages/partials/scheduled_tab.css
@@ -50,7 +50,15 @@
 }
 
 .scheduled-card {
-  background-color: #fff;
+  /* background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
+  background-color: #94c2f2;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 15px;
@@ -58,6 +66,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: black;
 }
 
 .card-content {
